<resources>
    <string name="app_name">iVolunteer</string>
    <string name="title_activity_reg">iVolunteer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_temp">tempActivity</string>
    <string name="title_activity_volunteer">VolunteerActivity</string>
    <string name="title_activity_need_help">NeedHelpActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_edit_personal_details">Edit personal details</string>
    <string name="menu__my_activities">My activities</string>
    <string name="menu_new_help_events">New help event</string>
    <string name="menu__my_volunteers">My volunteers</string>
    <string name="menu_search_for_volunteers">Search for volunteers</string>
    <string name="menu_my_score">My score</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rate_volunteer">RateVolunteerActivity</string>
</resources>