<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_activities">

    <fragment
        android:id="@+id/nav_edit_personal_details"
        android:name="com.ivolunteer.ivolunteer.ui.editPersonalDetails.EditPersonalDetailsFragment"
        android:label="@string/menu_edit_personal_details"
        tools:layout="@layout/fragment_edit_personal_details" />

    <fragment
        android:id="@+id/nav_my_activities"
        android:name="com.ivolunteer.ivolunteer.ui.needHelpUserFragments.needHelpUserMyActivities.MyActivitiesFragment"
        android:label="@string/menu__my_activities"
        tools:layout="@layout/fragment_my_activities" />

    <fragment
        android:id="@+id/nav_new_help_event"
        android:name="com.ivolunteer.ivolunteer.ui.needHelpUserFragments.needHelpUserNewHelpEvent.NewHelpEventFragment"
        android:label="@string/menu_new_help_events"
        tools:layout="@layout/fragment_new_help_event" />
</navigation>